[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-python"
version = "0.93"
description = "A NEAT (NeuroEvolution of Augmenting Topologies) implementation"
readme = "README.md"
requires-python = ">=3.6, <3.12"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Alan Mcintyre", email = "alan@codereclaimers.com"},
    {name = "Cesar Gomes Miguel"},
    {name = "Carolina Feher da Silva"},
    {name = "Marcio Lobo Netto"}
]
maintainers = [
    {name = "Alan McIntyre", email = "alan@codereclaimers.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering"
]

[tool.setuptools]
packages = ["neat", "neat.iznn", "neat.nn", "neat.ctrnn"]
